--- a/MarketplaceFrontend/_Imports.razor
+++ b/MarketplaceFrontend/_Imports.razor
@@ -1,10 +1,19 @@
-﻿@using System.Net.Http
+﻿@using System
+@using System.Net.Http
 @using System.Net.Http.Json
+@using System.Threading.Tasks
+@using System.Collections.Generic
+@using System.Linq
+
 @using Microsoft.AspNetCore.Components
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Components.Routing
+@using Microsoft.AspNetCore.Components.Web
+@using Microsoft.JSInterop
+
 @using Blazored.LocalStorage
 @using MarketplaceFrontend
 @using MarketplaceFrontend.Authentication
 @using MarketplaceFrontend.Shared
-@using Microsoft.AspNetCore.Components.Routing;
+@using MarketplaceAPI.Models
