Added SOLD overlay on IsSold Listings Sold listing don't appear on index page

--- a/MarketplaceFrontend/Pages/Index.razor
+++ b/MarketplaceFrontend/Pages/Index.razor
@@ -38,6 +38,6 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        listings = await Http.GetFromJsonAsync<List<ListingResponseDto>>("api/listings");
+        listings = await Http.GetFromJsonAsync<List<ListingResponseDto>>("api/listings/active");
     }
 }
