--- a/MarketplaceFrontend/Pages/Profile.razor
+++ b/MarketplaceFrontend/Pages/Profile.razor
@@ -26,7 +26,9 @@ else
 
 @if (listings == null)
 {
-    <p><em>Loading your listings...</em></p>
+    <div class="d-flex justify-content-center align-items-center" style="height: 300px;">
+        <div class="spinner-border text-primary" role="status"></div>
+    </div>
 }
 else if (!listings.Any())
 {
